# dex

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.md  REFACTOR.md  appveyor.yml  create-installer.bat  dex.yml  installer.nsi  make-release.bat.in
apps/: CMakeLists.txt
apps/dex/: CMakeLists.txt
apps/dex/src/: main.cpp
cmake/: FindYAMLCPP.cmake
dependencies/: CMakeLists.txt  yaml.cmake
doc/: _config.yml  preamble.tex
doc/man/: cli.dex  output.dex
doc/src/: manual.dex
doc/src/man/: cli.dex  commands.dex  (+2 more)
examples/cppclass/: dex.ini  dex.yml  math.h
examples/simplemanual/: dex.ini  dex.yml  manual.h
modules/: CMakeLists.txt
modules/cxxast/: CMakeLists.txt
modules/dex/: CMakeLists.txt  dex-app.h  dex-model.h  dex-output.h
modules/dex-app/: CMakeLists.txt
modules/dex-app/include/dex/app/: command-line-parser.h  dex.h  ini-config-parser.h
modules/dex-app/src/app/: command-line-parser.cpp  dex.cpp  message-handler.cpp
modules/dex-app/src/output/: dex.cpp
modules/dex-common/: CMakeLists.txt
modules/dex-common/include/dex/: dex-common.h
modules/dex-common/include/dex/common/: errors.h  file-utils.h  json-utils.h  logging.h  state.h
modules/dex-common/src/common/: errors.cpp  file-utils.cpp  json-utils.cpp  logging.cpp  settings.cpp
modules/dex-input/: CMakeLists.txt
modules/dex-model/: CMakeLists.txt
modules/dex-model/include/dex/model/: class-documentation.h  display-math.h  entity-documentation.h  enum-documentation.h  function-documentation.h  manual.h  model-visitor.h  model.h  variable-documentation.h
modules/dex-model/src/model/: display-math.cpp  enum-documentation.cpp  function-documentation.cpp  manual.cpp  model-visitor.cpp  model.cpp  since.cpp  variable-documentation.cpp
modules/dex-output/: CMakeLists.txt
modules/dex/app/: CMakeLists.txt  command-line-parser.cpp  command-line-parser.h  dex-config.cpp  dex-config.h  dex.cpp  dex.h  ini-config-parser.cpp  message-handler.h  parsing.cpp  parsing.h  version.h
modules/dex/common/: CMakeLists.txt  file-utils.cpp  file-utils.h  json-utils.cpp  json-utils.h  logging.cpp  logging.h  settings.h  state.h  string-utils.cpp  string-utils.h  yaml-config.cpp  yaml-config.h
modules/dex/input/: CMakeLists.txt  cpp-parser.cpp  cpp-parser.h  dex.fmt  document-writer-frontend.cpp  document-writer-frontend.h  document-writer.cpp  document-writer.h  dom-writer.h  enum-parser.cpp  enum-parser.h  format.cpp  format.h  function-caller.cpp  function-caller.h  functional.cpp  functional.h  manual-parser.cpp  manual-parser.h  paragraph-writer.cpp  paragraph-writer.h  parser-errors.cpp  parser-errors.h  parser-frontend.cpp  parser-frontend.h  parser-machine.cpp  parser-machine.h  program-parser.cpp  program-parser.h
modules/dex/model/: CMakeLists.txt  class-documentation.cpp  class-documentation.h  code-block.cpp  code-block.h  display-math.cpp  display-math.h  document.cpp  document.h  entity-documentation.h  enum-documentation.cpp  enum-documentation.h  function-documentation.cpp  function-documentation.h  group.cpp  group.h  inline-math.cpp  inline-math.h  macro-documentation.cpp  macro-documentation.h  manual.cpp  manual.h  model-base.cpp  model-base.h  model-visitor.cpp  model-visitor.h  model.cpp  model.h  namespace-documentation.cpp  namespace-documentation.h  paragraph-annotations.cpp  paragraph-annotations.h  program.cpp  program.h  since.cpp  since.h  typedef-documentation.cpp  typedef-documentation.h  variable-documentation.cpp  variable-documentation.h
modules/dex/output/: CMakeLists.txt  config.cpp  config.h  dir-copy.cpp  dir-copy.h  exporter.cpp  exporter.h  json-export.cpp  json-export.h  json-mapping.h  json-output-annotator.cpp  json-output-annotator.h  latex-export.cpp  latex-export.h  liquid-exporter-profile.cpp  liquid-exporter-profile.h  liquid-exporter-url-annotator.cpp  liquid-exporter-url-annotator.h  liquid-exporter.cpp  liquid-exporter.h  liquid-filters.cpp  liquid-filters.h  liquid-stringifier.cpp  liquid-stringifier.h  liquid-wrapper.cpp  liquid-wrapper.h  markdown-export.cpp  markdown-export.h  paragraph-converter.cpp  paragraph-converter.h  resources.qrc
modules/dex/output/json/: json-export.cpp  json-export.h
modules/dex/output/liquid/: latex-export.cpp  latex-export.h  liquid-exporter.cpp  liquid-exporter.h  liquid-filters.cpp  liquid-stringifier.cpp  liquid-stringifier.h  liquid-wrapper.cpp  markdown-export.cpp  markdown-export.h
modules/dex/output/templates/json/: config.ini
modules/dex/output/templates/latex/: api-reference.tex  config.ini  document.tex  groupdefault  macros.tex  manual.tex  preamble.tex
modules/dex/output/templates/markdown/: class.md  config.ini  groupdefault  index.md  namespace.md
modules/dex/output/templates/markdown/_layouts/: class.md
modules/dex/output/templates/md/: config.ini
modules/dex/output/templates/tex/: config.ini
tests/: CMakeLists.txt  main.cpp
tests/dex-common/: CMakeLists.txt  main.cpp  test-dex-common.cpp  test-dex-common.h
tests/dex-input/: CMakeLists.txt  main.cpp  test-dex-input.cpp  test-dex-input.h
tests/dex-model/: CMakeLists.txt  main.cpp  test-dex-model.cpp  test-dex-model.h
tests/dex-model-examples/: CMakeLists.txt  model-examples.cpp  model-examples.h
tests/dex-output/: CMakeLists.txt  dex-output-resources.h.in  main.cpp  test-dex-output.cpp  test-dex-output.h  test-output-resources.qrc
tests/parsing/: CMakeLists.txt  dex-parsing-resources.h.in  main.cpp  test-parsing-resources.qrc  test-parsing.cpp  test-parsing.h
tests/parsing/data/: class-with-inline.json  class-with-inline.txt  class-with-var.json  class-with-var.txt  datasets.txt  enum-doc.json  enum-doc.txt  enum-in-group.json  enum-in-group.txt  manual-simple.json  manual-simple.txt  manual-with-inline-math.json  manual-with-inline-math.txt  manual-with-math.json  manual-with-math.txt  namespace-with-code.json  namespace-with-code.txt  namespace-with-typedef.json  namespace-with-typedef.txt  page-with-math.json  page-with-math.txt  prog-with-macro-typedef.json  prog-with-macro-typedef.txt
(+86 files in other folders)
